--- a/src/app/overview-event/event/event.component.html
+++ b/src/app/overview-event/event/event.component.html
@@ -3,7 +3,7 @@
   <h1 class="text-center text-black">Liste des Events</h1>
 
   <!-- Bouton pour ajouter un événement avec style bleu -->
-  <div class="add-participant mb-4">
+  <div class="add-event mb-4">
     <button class="btn btn-primary" (click)="openAddPopup()">Add Event</button>
   </div>
 
