--- a/src/app/overview-participant/participant/participant.component.html
+++ b/src/app/overview-participant/participant/participant.component.html
@@ -1,6 +1,7 @@
 <div class="container mt-4 align-right">
   <!-- Titre de la liste des participants -->
-  <h1 class="text-black">Liste des Participants</h1>
+
+  <h1 class="text-center text-black">Liste des Participants</h1>
 
   <div class="add-participant mb-4">
     <button (click)="openAddPopup()" class="btn btn-primary">
