--- a/src/app/overview-event/event/event.component.css
+++ b/src/app/overview-event/event/event.component.css
@@ -1,15 +1,17 @@
 .container {
-  background-color: #f7f7f7; /* Fond clair */
+  margin-top: 20px;
   padding: 20px;
-  border-radius: 8px;
+  background-color: #f0f8ff;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .data-grid {
-  background-color: #ffffff; /* Fond blanc pour la grille */
+  background-color: #ffffff;
 }
 
-.add-participant button {
-  background-color: #007bff; /* Bleu pour le bouton */
+.add-event button {
+  background-color: #28a745;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -17,10 +19,10 @@
   border-radius: 5px;
 }
 
-.add-participant button:hover {
-  background-color: #0056b3; /* Bleu plus foncé au survol */
+.add-event button:hover {
+  background-color: #28a745;
 }
 
 h1.text-black {
-  color: #343a40; /* Noir plus foncé pour le titre */
+  color: #343a40;
 }
