--- a/src/app/Authentification/login/login.component.html
+++ b/src/app/Authentification/login/login.component.html
@@ -1,16 +1,15 @@
 <div class="container">
-  <div class="brand">
-    <img src="./assets/images/event.png" alt="Event Image">
-  </div>
   <div class="row justify-content-center mt-5">
     <div class="col-md-6">
-      <div class="card">
+      <h1 class="text-center mb-4">Event System</h1>
+
+      <div class="card shadow-lg border-0">
         <div class="card-body">
           <h2 class="card-title mb-4 text-center">Login</h2>
           <form [formGroup]="loginForm" (ngSubmit)="login()">
             <div class="mb-3">
               <label for="email" class="form-label">Email:</label>
-              <input type="email" id="email" name="email" class="form-control" formControlName="email">
+              <input type="email" id="email" name="email" class="form-control" formControlName="email" placeholder="Enter your email">
               <div *ngIf="loginForm.get('email')?.hasError('required') && loginForm.get('email')?.touched" class="alert alert-danger mt-2">
                 L'email est requis.
               </div>
@@ -20,13 +19,16 @@
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password:</label>
-              <input type="password" id="password" name="password" class="form-control" formControlName="password">
+              <input type="password" id="password" name="password" class="form-control" formControlName="password" placeholder="Enter your password">
               <div *ngIf="loginForm.get('password')?.hasError('required') && loginForm.get('password')?.touched" class="alert alert-danger mt-2">
                 Le mot de passe est requis.
               </div>
             </div>
             <div class="d-grid">
-              <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Login</button>
+              <button type="submit" class="btn btn-primary btn-lg" [disabled]="!loginForm.valid">Login</button>
+            </div>
+            <div class="mt-3 text-center">
+              <small>Pas encore inscrit? <a href="#" class="text-primary">Créer un compte</a></small>
             </div>
           </form>
         </div>
