--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,28 +1,25 @@
 <div class="d-flex">
-  <!-- Sidebar -->
   <app-sidebar class="sidebar"></app-sidebar>
 
-  <!-- Contenu principal -->
   <div class="container mt-4 flex-grow-1">
     <div class="row">
-      <!-- Card pour l'événement -->
       <div class="col-md-5 mb-4" (click)="redirectTo('/listEvent')">
         <div class="dashboard-card bg-primary text-white shadow">
           <div class="card-content">
             <i class="fas fa-calendar-alt fa-4x icon-style"></i>
             <h4>Event</h4>
-            <p class="display-4">{{ numberOfEvents }}</p> <!-- Affiche le nombre d'événements -->
+            <p class="display-4">{{ numberOfEvents }}</p>
           </div>
         </div>
       </div>
 
-      <!-- Card pour le participant -->
+
       <div class="col-md-5 mb-4" (click)="redirectTo('/listParticipant')">
         <div class="dashboard-card bg-info text-white shadow">
           <div class="card-content">
             <i class="fas fa-users fa-4x icon-style"></i>
             <h4>Participant</h4>
-            <p class="display-4">{{ numberOfParticipants }}</p> <!-- Affiche le nombre de participants -->
+            <p class="display-4">{{ numberOfParticipants }}</p> 
           </div>
         </div>
       </div>
